--- a/game/game_vs7.vcproj
+++ b/game/game_vs7.vcproj
@@ -20,7 +20,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(SolutionDir)\enet\include&quot;"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)enet\include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_CRT_SECURE_NO_DEPRECATE;_CONSOLE"
 				GeneratePreprocessedFile="0"
 				MinimalRebuild="FALSE"
