A big update further factor the global variable declarations. This reduces the use of minimize the use of Egoboo.h and proto.h. These changes have likely made the code unstable again.
I have added a subdirectory for Doxygen's automatic documentation generator for egoboo's API. The actual .html files will not be added to the SVN, but anyone with access to Doxygen can generate these files. I may start adding Doxygen tags into the code to make the generated files more useful.

--- a/game/game_vs7.vcproj
+++ b/game/game_vs7.vcproj
@@ -29,8 +29,8 @@
 				SmallerTypeCheck="FALSE"
 				RuntimeLibrary="3"
 				BufferSecurityCheck="TRUE"
-				EnableFunctionLevelLinking="TRUE"
-				EnableEnhancedInstructionSet="2"
+				EnableFunctionLevelLinking="FALSE"
+				EnableEnhancedInstructionSet="0"
 				UsePrecompiledHeader="0"
 				PrecompiledHeaderThrough=""
 				BrowseInformation="1"
